<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Programm</string>
    <string name="acontrollerMap" translatable="false">acontrollerMap.xml</string>
    <string name="ccontrollerMap" translatable="false">ccontrollerMap.xml</string>
    <string name="themeDark" translatable="false">_dark</string>
    <string name="themeLight" translatable="false">_light</string>
    <string name="textSpan">Finish work background application after blocked screen helps saved battery.</string>
    <string name="first_form">First form!!!</string>
    <string name="enter_family">Entering family</string>
    <string name="press_me">Press me:)</string>
    <string name="sergey">Sergey</string>
    <string name="progress">Progress</string>
    <string name="text_on_button">Text on the button</string>
    <string name="mode_already">Mode of the already</string>
    <string name="switcher">Switcher</string>
    <string name="activate">Activate</string>
    <string name="slider_text">Slider</string>
    <string name="prompt">Prompt</string>
    <string name="radio_dark">Dark theme</string>
    <string name="radio_light">Light theme</string>
    <string name="checkbox_text">Checkbox flags</string>
    <string-array name="menuEditor">
        <item>Copy</item>
        <item>Paste</item>
        <item>Cut</item>
        <item>Delete</item>
    </string-array>
    <string-array name="spinArray">
        <item>Ivan</item>
        <item>Irina</item>
        <item>Sergey Shatalov</item>
        <item>Maxim</item>
        <item>Vladislav</item>
        <item>06.06.1979</item>
        <item>Shatalov Sergey</item>
        <item>Olga</item>
        <item>Viktor Alexeevich</item>
        <item>Cat</item>
        <item>Maria</item>
        <item>Nina Shatalova</item>
        <item>Alex</item>
        <item>Alexandr</item>
    </string-array>
</resources>
