<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:z="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    z:decorate="scrollbar|glow"
    z:behavior="clickable"
    z:pad="3dp"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        z:styles="@style/llinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:id="@+id/progress2" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/progress" z:layout_gravity="center"  z:styles="@style/linearProgress"
            z:range="0,170" z:progress="150" z:orientation="horizontal" />
        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            z:fkTile1="@integer/formBackground" z:fbo="true"
            z:fkGravity="center" z:fkScale="0.5"
            z:text="serg"/>
        <CheckBox
            android:id="@+id/spans"
            z:text="changeSpans"
            z:styles="@style/checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit1" z:fbo="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                z:hint="@string/prompt"
                z:fkGravity="center"
                z:icGravity="end"
                z:icTiles="@integer/iconEditEx"
                z:inputMode="text"
                z:pad="1dp"
                android:gravity="center_vertical|center_horizontal"
                z:fkTiles="@integer/edit"
                z:textLines="3" />
        </EditLayout>
        <Spinner
            android:id="@+id/select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            z:styles="@style/select" />
        <GridView
            android:id="@+id/grid1"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            z:styles="@style/grid"
            z:orientation="horizontal"
            z:bkTiles="@integer/selectDrop" />
        <EditText
            android:id="@+id/edit2" android:layout_width="match_parent" android:layout_height="wrap_content"
            z:styles="@style/edittext" z:inputMode="text" z:hint="@string/enter_family" z:textStyle="normal"  z:textLines="1" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            z:pad="3dp"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/radioDark" android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                z:layout_group="1" z:text="@string/radio_dark"
                z:styles="@style/radiobutton"
                z:decorate="checked"
                z:textEllipsis="middle"
                z:textLines="1" />
            <CheckBox
                android:layout_width="wrap_content" android:layout_weight="2"
                android:layout_height="match_parent"
                z:decorate="checked"
                android:id="@+id/chkbox"
                z:text="@string/checkbox_text" z:styles="@style/checkbox" />
            <RadioButton
                android:id="@+id/radioLight" android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                z:layout_group="1" z:text="@string/radio_light"
                z:decorate="checked"
                z:textEllipsis="middle"
                z:styles="@style/radiobutton" />
        </LinearLayout>
        <ListView
            android:id="@+id/list1"
            android:layout_width="wrap_content" android:layout_height="120dp"
            z:styles="@style/ribbon"
            z:orientation="horizontal"
            z:decorate="overscroll"
            z:bkTiles="@integer/selectDrop" />
        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            z:styles="@style/button"
            z:iconka="@integer/iconCancel"
            android:text="@string/press_me" z:textSize="25sp" z:icGravity="end|center_vertical"
            z:tap="pressed" />
        <Switch
            android:id="@+id/switch1" android:layout_width="match_parent" android:layout_height="wrap_content"
            z:styles="@style/switchButton"
            z:text="@string/mode_already" />
        <Button
            android:id="@+id/button2" android:layout_width="match_parent" android:layout_height="wrap_content"
            z:styles="@style/button"
            z:iconka="@integer/iconCancel" android:text="@string/press_me" z:icGravity="end|center_vertical"
            z:tap="pressed" />
        <Switch
            android:id="@+id/switch2" android:layout_width="match_parent" android:layout_height="wrap_content"
            z:styles="@style/switchButton"
            z:fkGravity="start|center_vertical"
            z:textStyle="bold"
            z:text="@string/switcher"
            z:gravity="end|center_vertical" />
        <Switch
            android:id="@+id/switch3" android:layout_width="match_parent" android:layout_height="wrap_content"
            z:styles="@style/switchButton"
            z:textStyle="italic|strike|underline"
            z:text="@string/activate"
            z:decorate="checked" />
        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            z:styles="@style/button"
            z:iconka="@integer/iconCancel"
            android:text="@string/press_me"
            z:tap="pressed" />
        <SeekBar
            android:id="@+id/seek"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            z:styles="@style/slider"
            z:speedTrack="1.0" z:progress="3"
            z:text="@string/slider_text"
            z:orientation="horizontal"
            z:decorate="tips"
            z:range="5,40" />
        <SeekBar
            android:id="@+id/seek1"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            z:styles="@style/slider"
            z:speedTrack="1.2" z:progress="130"
            z:orientation="horizontal"
            z:marginStart="10dp"
            z:marginTop="3dp"
            z:decorate="tips"
            z:range="50,170" />
        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            z:styles="@style/button"
            z:iconka="@integer/iconCancel"
            android:text="@string/text_on_button" z:icGravity="start|center_vertical"
            z:textStyle="underline|bold_italic" />
        <SeekBar
            android:id="@+id/seek2"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            z:styles="@style/slider"
            z:speedTrack="1.0" z:progress="30"
            z:sliderMode="scale"
            z:decorate="tips"
            z:pad="1dp" z:range="0,70" />
        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            z:styles="@style/button"
            z:iconka="@integer/iconCancel"
            android:text="@string/press_me"
            z:tap="pressed" />
        <ProgressBar
            android:id="@+id/progress1" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/sergey" z:layout_gravity="center"  z:styles="@style/linearProgress"
            z:range="0,70" z:progress="10" z:orientation="horizontal" />
    </LinearLayout>
</ScrollView>
